chore: Upgrade to Vaadin 24.4.10 and Spring 3.3.3

--- a/package.json
+++ b/package.json
@@ -4,24 +4,24 @@
   "type": "module",
   "dependencies": {
     "@polymer/polymer": "3.5.1",
-    "@vaadin/bundles": "24.4.0-rc3",
+    "@vaadin/bundles": "24.4.5",
     "@vaadin/common-frontend": "0.0.19",
-    "@vaadin/hilla-file-router": "24.4.0-rc2",
-    "@vaadin/hilla-frontend": "24.4.0-rc2",
-    "@vaadin/hilla-lit-form": "24.4.0-rc2",
-    "@vaadin/hilla-react-auth": "24.4.0-rc2",
-    "@vaadin/hilla-react-crud": "24.4.0-rc2",
-    "@vaadin/hilla-react-form": "24.4.0-rc2",
-    "@vaadin/hilla-react-i18n": "24.4.0-rc2",
-    "@vaadin/hilla-react-signals": "24.4.0-rc2",
-    "@vaadin/polymer-legacy-adapter": "24.4.0-rc3",
-    "@vaadin/react-components": "24.4.0-rc3",
-    "@vaadin/react-components-pro": "24.4.0-rc3",
+    "@vaadin/hilla-file-router": "24.4.6",
+    "@vaadin/hilla-frontend": "24.4.6",
+    "@vaadin/hilla-lit-form": "24.4.6",
+    "@vaadin/hilla-react-auth": "24.4.6",
+    "@vaadin/hilla-react-crud": "24.4.6",
+    "@vaadin/hilla-react-form": "24.4.6",
+    "@vaadin/hilla-react-i18n": "24.4.6",
+    "@vaadin/hilla-react-signals": "24.4.6",
+    "@vaadin/polymer-legacy-adapter": "24.4.5",
+    "@vaadin/react-components": "24.4.5",
+    "@vaadin/react-components-pro": "24.4.5",
     "@vaadin/router": "1.7.5",
     "@vaadin/vaadin-development-mode-detector": "2.0.7",
-    "@vaadin/vaadin-lumo-styles": "24.4.0-rc3",
-    "@vaadin/vaadin-material-styles": "24.4.0-rc3",
-    "@vaadin/vaadin-themable-mixin": "24.4.0-rc3",
+    "@vaadin/vaadin-lumo-styles": "24.4.5",
+    "@vaadin/vaadin-material-styles": "24.4.5",
+    "@vaadin/vaadin-themable-mixin": "24.4.5",
     "@vaadin/vaadin-usage-statistics": "2.1.2",
     "construct-style-sheets-polyfill": "3.1.0",
     "date-fns": "2.29.3",
@@ -32,21 +32,21 @@
     "react-router-dom": "6.23.1"
   },
   "devDependencies": {
-    "@babel/preset-react": "7.24.6",
-    "@rollup/plugin-replace": "5.0.6",
+    "@babel/preset-react": "7.24.7",
+    "@rollup/plugin-replace": "5.0.7",
     "@rollup/pluginutils": "5.1.0",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
-    "@vaadin/hilla-generator-cli": "24.4.0-rc2",
-    "@vaadin/hilla-generator-core": "24.4.0-rc2",
-    "@vaadin/hilla-generator-plugin-backbone": "24.4.0-rc2",
-    "@vaadin/hilla-generator-plugin-barrel": "24.4.0-rc2",
-    "@vaadin/hilla-generator-plugin-client": "24.4.0-rc2",
-    "@vaadin/hilla-generator-plugin-model": "24.4.0-rc2",
-    "@vaadin/hilla-generator-plugin-push": "24.4.0-rc2",
-    "@vaadin/hilla-generator-plugin-subtypes": "24.4.0-rc2",
-    "@vaadin/hilla-generator-utils": "24.4.0-rc2",
-    "@vitejs/plugin-react": "4.3.0",
+    "@vaadin/hilla-generator-cli": "24.4.6",
+    "@vaadin/hilla-generator-core": "24.4.6",
+    "@vaadin/hilla-generator-plugin-backbone": "24.4.6",
+    "@vaadin/hilla-generator-plugin-barrel": "24.4.6",
+    "@vaadin/hilla-generator-plugin-client": "24.4.6",
+    "@vaadin/hilla-generator-plugin-model": "24.4.6",
+    "@vaadin/hilla-generator-plugin-push": "24.4.6",
+    "@vaadin/hilla-generator-plugin-subtypes": "24.4.6",
+    "@vaadin/hilla-generator-utils": "24.4.6",
+    "@vitejs/plugin-react": "4.3.1",
     "async": "3.2.5",
     "glob": "10.4.1",
     "rollup-plugin-brotli": "3.1.0",
@@ -54,7 +54,7 @@
     "strip-css-comments": "5.0.0",
     "transform-ast": "2.4.4",
     "typescript": "5.4.5",
-    "vite": "5.2.12",
+    "vite": "5.3.3",
     "vite-plugin-checker": "0.6.4",
     "workbox-build": "7.1.1",
     "workbox-core": "7.1.0",
@@ -63,24 +63,24 @@
   "vaadin": {
     "dependencies": {
       "@polymer/polymer": "3.5.1",
-      "@vaadin/bundles": "24.4.0-rc3",
+      "@vaadin/bundles": "24.4.5",
       "@vaadin/common-frontend": "0.0.19",
-      "@vaadin/hilla-file-router": "24.4.0-rc2",
-      "@vaadin/hilla-frontend": "24.4.0-rc2",
-      "@vaadin/hilla-lit-form": "24.4.0-rc2",
-      "@vaadin/hilla-react-auth": "24.4.0-rc2",
-      "@vaadin/hilla-react-crud": "24.4.0-rc2",
-      "@vaadin/hilla-react-form": "24.4.0-rc2",
-      "@vaadin/hilla-react-i18n": "24.4.0-rc2",
-      "@vaadin/hilla-react-signals": "24.4.0-rc2",
-      "@vaadin/polymer-legacy-adapter": "24.4.0-rc3",
-      "@vaadin/react-components": "24.4.0-rc3",
-      "@vaadin/react-components-pro": "24.4.0-rc3",
+      "@vaadin/hilla-file-router": "24.4.6",
+      "@vaadin/hilla-frontend": "24.4.6",
+      "@vaadin/hilla-lit-form": "24.4.6",
+      "@vaadin/hilla-react-auth": "24.4.6",
+      "@vaadin/hilla-react-crud": "24.4.6",
+      "@vaadin/hilla-react-form": "24.4.6",
+      "@vaadin/hilla-react-i18n": "24.4.6",
+      "@vaadin/hilla-react-signals": "24.4.6",
+      "@vaadin/polymer-legacy-adapter": "24.4.5",
+      "@vaadin/react-components": "24.4.5",
+      "@vaadin/react-components-pro": "24.4.5",
       "@vaadin/router": "1.7.5",
       "@vaadin/vaadin-development-mode-detector": "2.0.7",
-      "@vaadin/vaadin-lumo-styles": "24.4.0-rc3",
-      "@vaadin/vaadin-material-styles": "24.4.0-rc3",
-      "@vaadin/vaadin-themable-mixin": "24.4.0-rc3",
+      "@vaadin/vaadin-lumo-styles": "24.4.5",
+      "@vaadin/vaadin-material-styles": "24.4.5",
+      "@vaadin/vaadin-themable-mixin": "24.4.5",
       "@vaadin/vaadin-usage-statistics": "2.1.2",
       "construct-style-sheets-polyfill": "3.1.0",
       "date-fns": "2.29.3",
@@ -91,21 +91,21 @@
       "react-router-dom": "6.23.1"
     },
     "devDependencies": {
-      "@babel/preset-react": "7.24.6",
-      "@rollup/plugin-replace": "5.0.6",
+      "@babel/preset-react": "7.24.7",
+      "@rollup/plugin-replace": "5.0.7",
       "@rollup/pluginutils": "5.1.0",
       "@types/react": "18.3.3",
       "@types/react-dom": "18.3.0",
-      "@vaadin/hilla-generator-cli": "24.4.0-rc2",
-      "@vaadin/hilla-generator-core": "24.4.0-rc2",
-      "@vaadin/hilla-generator-plugin-backbone": "24.4.0-rc2",
-      "@vaadin/hilla-generator-plugin-barrel": "24.4.0-rc2",
-      "@vaadin/hilla-generator-plugin-client": "24.4.0-rc2",
-      "@vaadin/hilla-generator-plugin-model": "24.4.0-rc2",
-      "@vaadin/hilla-generator-plugin-push": "24.4.0-rc2",
-      "@vaadin/hilla-generator-plugin-subtypes": "24.4.0-rc2",
-      "@vaadin/hilla-generator-utils": "24.4.0-rc2",
-      "@vitejs/plugin-react": "4.3.0",
+      "@vaadin/hilla-generator-cli": "24.4.6",
+      "@vaadin/hilla-generator-core": "24.4.6",
+      "@vaadin/hilla-generator-plugin-backbone": "24.4.6",
+      "@vaadin/hilla-generator-plugin-barrel": "24.4.6",
+      "@vaadin/hilla-generator-plugin-client": "24.4.6",
+      "@vaadin/hilla-generator-plugin-model": "24.4.6",
+      "@vaadin/hilla-generator-plugin-push": "24.4.6",
+      "@vaadin/hilla-generator-plugin-subtypes": "24.4.6",
+      "@vaadin/hilla-generator-utils": "24.4.6",
+      "@vitejs/plugin-react": "4.3.1",
       "async": "3.2.5",
       "glob": "10.4.1",
       "rollup-plugin-brotli": "3.1.0",
@@ -113,13 +113,13 @@
       "strip-css-comments": "5.0.0",
       "transform-ast": "2.4.4",
       "typescript": "5.4.5",
-      "vite": "5.2.12",
+      "vite": "5.3.3",
       "vite-plugin-checker": "0.6.4",
       "workbox-build": "7.1.1",
       "workbox-core": "7.1.0",
       "workbox-precaching": "7.1.0"
     },
-    "hash": "c6bc48918914cdac7de9065fa560a91419beb6a7ef4fa45716f4a8f24fff9f98"
+    "hash": "9e0d193c033f1b4eaf5a894dd08d897550065ef5c089b6fffa9b6f694c23c2ae"
   },
   "overrides": {
     "@vaadin/bundles": "$@vaadin/bundles",
