--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "noImplicitThis": true,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
+    "noEmit": true,
     "experimentalDecorators": true,
     "useDefineForClassFields": false,
     "baseUrl": "src/main/frontend",
