feat!: replace Testbench tests with Playwright Java & TS (v24.4) (#45)
* feat!: replace Testbench tests with Playwright Java & TS (v24.4)

* miscellaneous changes to let tests pass locally

* fix audit issues

* guess url can have continue

* close playwright after tests

---------

Co-authored-by: Mikhail Shabarov <mikhail@vaadin.com>
Co-authored-by: Mikhail Shabarov <61410877+mshabarov@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "license": "UNLICENSED",
   "type": "module",
   "dependencies": {
+    "@playwright/test": "^1.47.2",
     "@polymer/polymer": "3.5.1",
     "@vaadin/bundles": "24.4.10",
     "@vaadin/common-frontend": "0.0.19",
@@ -148,6 +149,10 @@
     "proj4": "$proj4",
     "@vaadin/vaadin-themable-mixin": "$@vaadin/vaadin-themable-mixin",
     "@vaadin/vaadin-lumo-styles": "$@vaadin/vaadin-lumo-styles",
-    "@vaadin/vaadin-material-styles": "$@vaadin/vaadin-material-styles"
+    "@vaadin/vaadin-material-styles": "$@vaadin/vaadin-material-styles",
+    "@playwright/test": "$@playwright/test"
+  },
+  "scripts": {
+    "test": "playwright test"
   }
 }
