--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "license": "UNLICENSED",
   "type": "module",
   "dependencies": {
-    "@playwright/test": "^1.47.2",
+    "@playwright/test": "^1.48.0",
     "@polymer/polymer": "3.5.1",
     "@vaadin/bundles": "24.4.10",
     "@vaadin/common-frontend": "0.0.19",
@@ -18,7 +18,7 @@
     "@vaadin/polymer-legacy-adapter": "24.4.10",
     "@vaadin/react-components": "24.4.10",
     "@vaadin/react-components-pro": "24.4.10",
-    "@vaadin/router": "1.7.5",
+    "@vaadin/router": "^2.0.0-rc4",
     "@vaadin/vaadin-development-mode-detector": "2.0.7",
     "@vaadin/vaadin-lumo-styles": "24.4.10",
     "@vaadin/vaadin-material-styles": "24.4.10",
